# pulse-multi-agent-platform

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/db/: mongodb.py
backend/app/exceptions/: handlers.py
backend/app/integrations/: __init__.py  llm.py  reddit.py
backend/app/middleware/: cors.py
backend/app/models/: reddit.py  responses.py
backend/app/routers/: __init__.py  health.py  product_dna.py  status.py
backend/app/services/: product_dna.py  system.py
backend/app/utils/: logging.py
backend/tests/: __init__.py  conftest.py  test_health.py  test_llm.py  test_product_dna.py  test_reddit.py
docs/: Backend-Architecture-Document.md  PRODUCT_DNA.md  frontend-architecture.md  frontend-components.md
docs/Scrum/: GanntChart.md  WBS.md  a.md
docs/Scrum/Sprint-0/: Main.md
docs/Scrum/Sprint-1/: Plan.md
docs/architecture/: ADR-001-architecture-style.md  System Overview Diagram.drawio  api-specifications.md  openapi_spec.yaml  service-boundaries.md
docs/presentations/: Pulse Market Visibility + Seminar Presentation  (1).pptx  Pulse Market Visibility + Seminar Presentation .pptx
docs/proposals/: Enerpize_Partnership_Proposal.md  Enerpize_Partnership_Proposal_PDF.md  IZAM_Sponsorship_Proposal.md  Potential_Sponsors.md  Sponsorship_Proposal_Template.md
examples/crewai-poc/: README.md  executor_agent.py  main.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: DashboardLayout.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  (+4 more)
frontend/src/stores/: authStore.ts  index.ts  uiStore.ts
frontend/src/types/: api.ts
scripts/outreach/: .env.example  README.md  requirements.txt
scripts/outreach/scripts/: 01_scrape_emails.py  02_generate_proposals.py  03_send_emails.py
scripts/outreach/templates/: email_template.html  email_template.txt  proposal.md
scrum/: Initial_System_Design_Report.md  wbs-detailed.md  wbs-diagram.drawio
scrum/Sprint-1/: Backlog.md  GitHub-Issues.md  Issues-Abdelrahman-Elattar.md  Issues-Abdelrahman-Omar.md  Issues-Hager-Saad.md  Issues-Rana-Mahmoud.md  Retrospective.md
(+12 files in other folders)
